basic html colt steele

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Test Document</title>
+    <title>My first page</title>
 </head>
 
 <body>
     <h1>Dit is een test</h1>
     <h2>H2 test</h2>
 
+    <ol>
+        <li>orange</li>
+        <li>green</li>
+        <li>red</li>
+    </ol>
+
+    <ul>
+        <li>gras</li>
+        <li>plant</li>
+        <li>plant</li>
+        <ul>
+            <li>gggg</li>
+            <li>ggggdddd</li>
+        </ul>
+    </ul>
 
     <script src="app.js"></script>
 
