aanpassingen en assignment basic html

--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <title>dit is de title</title>
     <meta charset="UTF-8">
-    <title>My first page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Dit is een test</h1>
-    <h2>H2 test</h2>
-
-    <ol>
-        <li>orange</li>
-        <li>green</li>
-        <li>red</li>
-    </ol>
-
-    <ul>
-        <li>gras</li>
-        <li>plant</li>
-        <li>plant</li>
-        <ul>
-            <li>gggg</li>
-            <li>ggggdddd</li>
-        </ul>
-    </ul>
-
-    <script src="app.js"></script>
 
 </body>
 
