--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>CSS Hoofdstuk</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link href="css/style.css" rel="stylesheet">-->
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+    <h1>CSS beginnings</h1>
+
+    <h4>My Hobbies</h4>
+    <ul>
+        <li>fishing</li>
+        <li>biking</li>
+        <li>holidays</li>
+    </ul>
+
+    <article>
+        Cum id fugiunt, re eadem defendunt, quae Peripatetici, verba. In qua si nihil est praeter rationem, sit in una virtute finis
+        bonorum; Expectoque quid ad id, quod quaerebam, respondeas. Maximus dolor, inquit, brevis est. Quem Tiberina descensio
+        festo illo die tanto gaudio affecit, quanto L. Graecis hoc modicum est: Leonidas, Epaminondas, tres aliqui aut quattuor;
+        Atqui reperies, inquit, in hoc quidem pertinacem; Bonum integritas corporis: misera debilitas.
+    </article>
 
 </body>
 
