--- a/purrfect_match/purrf.html
+++ b/purrfect_match/purrf.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- If you want your bootstrap styled website to be responsive on mobile 
+   then be sure to add the following meta tag to your <head>  element, above the <title>  tag: -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Purrfect Match</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +13,8 @@
     <script src="bootstrap.js"></script>
     <script src="https://use.fontawesome.com/4469e5332d.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700" rel="stylesheet">
+    <script src="https://use.fontawesome.com/4773f10830.js"></script>
 </head>
 
 <body>
@@ -24,45 +29,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-brand" href="#">Purrfect Match</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
+                    <li class="active">
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">About</a>
+                    </li>
+                    <li>
+                        <a href="">Contact</a>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+                    <li><a href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -75,7 +60,7 @@
                 <h1>Perrfect Match</h1>
                 <h3>The Only Human-feline dating app</h3>
                 <hr>
-                <button class="btn btn-default btn-lg">Get Started!</button>
+                <button class="btn btn-default btn-lg"><i class="fa fa-paw" aria-hidden="true"></i> Get Started!</button>
             </div>
         </div>
     </div>
