document -> select and manipulate

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -40,8 +40,8 @@
     </nav>
     <div class="container">
         <div class="jumbotron">
-            <h1><i class="fa fa-hand-spock-o"></i> The Image Gallery!</h1>
-            <p>A bunch of beautiful images that i didn't take (except for the first one!)</p>
+            <h1 class="text-center"><i class="fa fa-hand-spock-o"></i> The Image Gallery!</h1>
+            <p class="text-center">A bunch of beautiful images that i didn't take (except for the first one!)</p>
         </div>
         <div class="row">
             <div class="col-lg-4 col-sm-6">
